# sim_seg_node

./: CMakeLists.txt  README.md  package.xml
config/: param.yaml
include/sim_seg_node/: k_means.hpp
launch/: sim_seg_launch.xml
src/: k_means.cpp
